--- a/css/styles.css
+++ b/css/styles.css
@@ -91,6 +91,7 @@ border-width: 0 0 1px;
 .site-nav {
 	display: flex;
 	margin-left: 93px;
+	position: relative;
 }
 
 .contacts-nav {
@@ -104,11 +105,9 @@ border-width: 0 0 1px;
 
 .nav-link {
 	display: block;
-	/* display: flex;
-	flex-direction: column;
-	flex-grow: 1;
-	align-items: center; */
-	padding: 31px 0px;
+	position: relative;
+	
+	padding: 32px 0px;
 
 	font-weight: 500;
 	font-size: 14px;
@@ -120,7 +119,7 @@ border-width: 0 0 1px;
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	padding: 31px 0px;
+	padding: 32px 0px;
 
 	font-weight: 500;
 	font-size: 14px;
@@ -141,25 +140,27 @@ border-width: 0 0 1px;
 .contact-icon {
 	margin-right: 10px;
 	fill: currentColor;
-	/* cursor: pointer; */
+	
 }
 .contact-icon:hover,
 .contact-icon:focus {
 	fill: var(--accent-color);
 }
 
-.site-nav .current {
+ .current {
 	color: var(--accent-color);
 }
 
-.site-nav .current::after {
-	display: block;
+.current::after {
+	position: absolute;
 	content: '';
-	width: 48px;
+	width: 100%;
 	height: 4px;
 	border-radius: 2px;
 	background-color: var(--accent-color);
-	/* align-self: flex-end; */
+	bottom: -1px;
+	left: 0;
+	
 }
 
 .nav-link:hover,
@@ -450,11 +451,16 @@ border-width: 0 0 1px;
 	border: transparent;
 	text-align: center;
 	cursor: pointer;
+	
 }
+
 .hero-buttom:hover,
 .hero-buttom:focus {
 	background-color: #188ce8;
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+	transform: translateY(-3px);
+    box-shadow: 0px 10px 20px #d4cbf3;
+	    
 }
 .filter-nav {
 	display: flex;
