--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,10 @@
 	--card-set-gap: 30px;
 	--section-set-gap: 94px;
 	--icon-color: #afb1b8;
+	--timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+	--time-duration: 250ms;
+	--transition-color: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	--transition-bg-color: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .page {
@@ -34,8 +38,6 @@
 	padding: 0px 15px;
 	margin-left: auto;
 	margin-right: auto;
-
-	/* outline: 2px solid tomato; */
 }
 
 h1,
@@ -121,9 +123,7 @@ img {
 	line-height: 1.14;
 	letter-spacing: 0.02em;
 	color: var(--title-text-color);
-	transition-property: color;
-	transition-duration: 250ms;
-	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+	transition: var(--transition-color);
 }
 .contacts-nav-link {
 	display: flex;
@@ -136,9 +136,8 @@ img {
 	line-height: 1.14;
 	letter-spacing: 0.02em;
 	color: var(--primary-text-color);
-	transition-property: color;
-	transition-duration: 250ms;
-	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+	transition: var(--transition-color);
 }
 
 .contacts-nav .contacts-nav-item + .contacts-nav-item {
@@ -214,64 +213,6 @@ img {
 	letter-spacing: 0.06em;
 	text-transform: uppercase;
 	color: var(--primare-bg-color);
-}
-
-/* -------------------------Modal window styles------------------------- */
-.backdrop {
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background-color: rgba(0, 0, 0, 0.2);
-	transition-property: background-color;
-	transition-duration: 250ms;
-	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-	
-}
-
-.backdrop.is-hidden {
-	opacity: 0;
-	/* visibility: hidden; */
-	pointer-events: none;
-}
-
-.modal {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-
-	min-width: 528px;
-	min-height: 581px;
-
-	box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-	border-radius: 4px;
-	background-color: var(--primare-bg-color);
-	/* transition-property: translate opacity; */
-	transform: scale(10) rotate(15deg);
-    opacity: 1;
-	transition-duration: 250ms;
-	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-	
-	
-}
-
-.modal-button {
-	position: absolute;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	top: 8px;
-	right: 8px;
-	height: 30px;
-	width: 30px;
-	background-color: transparent;
-	block-size: 30px;
-	/* outline: 1px solid tomato; */
-	border-radius: 50%;
-	cursor: pointer;
-	border: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 /* -------------------------Section styles------------------------- */
@@ -356,6 +297,29 @@ img {
 	margin-left: var(--card-set-gap);
 }
 
+.work-thumb {
+	position: relative;
+}
+
+.work-text {
+	position: absolute;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	bottom: 0;
+	width: 100%;
+	height: 70px;
+	background-color: rgba(47, 48, 58, 0.8);
+	font-weight: 700;
+	font-size: 14px;
+	line-height: 1.14;
+	text-align: center;
+	letter-spacing: 0.03em;
+	text-transform: uppercase;
+
+	color: var(--primare-bg-color);
+}
+
 /* -------------------------Our Team styles------------------------- */
 
 .team {
@@ -417,9 +381,7 @@ img {
 	border-radius: 50%;
 	cursor: pointer;
 	color: var(--icon-color);
-	transition-property: color, background-color;
-	transition-duration: 250ms;
-	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+	transition: var(--transition-bg-color), var(--transition-color);
 }
 .social-icon {
 	fill: currentColor;
@@ -464,9 +426,7 @@ img {
 	border-radius: 4px;
 	cursor: pointer;
 	color: var(--icon-color);
-	transition-property: color;
-	transition-duration: 250ms;
-	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+	transition: var(--transition-color);
 }
 .client-link:hover,
 .client-link:focus {
@@ -500,19 +460,15 @@ img {
 	border: transparent;
 	text-align: center;
 	cursor: pointer;
-
-	transition-property: color, background-color, box-shadow, transform;
-	transition-duration: 250ms;
-	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
-	
+	transition: var(--transition-bg-color), var(--transition-color),
+		box-shadow var(--time-duration) var(--timing-function), transform var(--time-duration) var(--timing-function);
 }
 
 .hero-buttom:hover,
 .hero-buttom:focus {
 	background-color: #188ce8;
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-	transform: translateY(-3px);
+	transform: translateY(-4px);
 	box-shadow: 0px 10px 20px #d4cbf3;
 }
 .filter-nav {
@@ -543,10 +499,8 @@ img {
 	text-align: center;
 	cursor: pointer;
 
-
-	transition-property: background-color, color, box-shadow;
-	transition-duration: 250ms;
-	transition-timing-function: linear;
+	transition: var(--transition-bg-color), var(--transition-color),
+		box-shadow var(--time-duration) var(--timing-function);
 }
 
 .button:hover,
@@ -560,7 +514,7 @@ img {
 
 .filter {
 	padding: var(--section-set-gap) 0;
-	}
+}
 
 .portfolio {
 	padding: 0;
@@ -603,6 +557,7 @@ img {
 
 .portfolio-card {
 	display: block;
+	transition: box-shadow var(--time-duration) var(--timing-function);
 }
 
 .portfolio-card:hover,
@@ -612,13 +567,13 @@ img {
 
 .card-thumb {
 	position: relative;
+	overflow: hidden;
 }
 
 .action {
 	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
+	top: 0;
+	left: 0;
 
 	width: 100%;
 	height: 100%;
@@ -628,15 +583,15 @@ img {
 	line-height: 1.56;
 	letter-spacing: 0.03em;
 	color: var(--primare-bg-color);
-	background-color: rgba(33, 150, 243, 0.9);
-	opacity: 0;
-	
+
+	transform: translateY(100%);
+	transition: var(--transition-bg-color), var(--transition-color), transform var(--time-duration) var(--timing-function);
 }
 
-.portfolio-flex .action:hover {
-	opacity: 1;
-	
-	/* transition: 500ms opacity linear; */
+.portfolio-card:hover .action,
+.portfolio-card:focus .action {
+	transform: translateY(0%);
+	background-color: rgba(33, 150, 243, 0.9);
 }
 
 /* -------------------------Styles footer------------------------- */
@@ -659,22 +614,16 @@ img {
 	font-size: 14px;
 	line-height: 1.71;
 	letter-spacing: 0.03em;
-	
 }
-
 
 .footer-nav-address {
 	color: var(--primare-bg-color);
-	transition-property: color;
-	transition-duration: 250ms;
-	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+	transition: var(--transition-color);
 }
 
 .footer-nav-contact {
 	color: rgba(255, 255, 255, 0.6);
-	transition-property: color;
-	transition-duration: 250ms;
-	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+	transition: var(--transition-color);
 }
 
 .footer-nav-item:not(:last-child) {
@@ -692,7 +641,6 @@ img {
 .footer-social {
 	margin: 0 0 0 70px;
 	align-self: baseline;
-	/* padding-top: 12px; */
 }
 
 .footer-social-item:not(:last-child) {
@@ -712,9 +660,8 @@ img {
 	border-radius: 50%;
 	cursor: pointer;
 	color: var(--primare-bg-color);
-	transition-property: background-color;
-	transition-duration: 250ms;
-	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+	transition: var(--transition-bg-color);
 }
 .footer-social-icon {
 	fill: currentColor;
@@ -733,4 +680,61 @@ img {
 	text-transform: uppercase;
 
 	color: var(--primare-bg-color);
+}
+
+/* -------------------------Modal window styles------------------------- */
+.backdrop {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.2);
+	transform: scale(1);
+	opacity: 1;
+	transition: opacity 500ms var(--timing-function);
+}
+
+.backdrop.is-hidden {
+	opacity: 0;
+	visibility: hidden;
+	pointer-events: none;
+}
+
+.backdrop.is-hidden .modal {
+	transform: translate(-50%, -50%) scale(1.1);
+}
+
+.modal {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+
+	padding: 15px;
+	min-width: 528px;
+	min-height: 581px;
+
+	box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+	border-radius: 4px;
+	background-color: var(--primare-bg-color);
+
+	transform: translate(-50%, -50%) scale(1);
+	transition: transform var(--time-duration) var(--timing-function);
+}
+
+.modal-button {
+	position: absolute;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	top: 8px;
+	right: 8px;
+	height: 30px;
+	width: 30px;
+	background-color: transparent;
+	block-size: 30px;
+	/* outline: 1px solid tomato; */
+	border-radius: 50%;
+	cursor: pointer;
+	border: 1px solid rgba(0, 0, 0, 0.1);
 }
